# turnaki-nexioq

./: .gitignore  .tfsec.yaml  CHANGELOG.md  PROXIMOS_PASOS_PRIORITARIOS.md  README.md  package-lock.json  package.json  plan.plan.md  setup-aws-oidc.sh
.github/: FASE6_RESUMEN_EJECUTIVO.md  SECRETS_SETUP.md  SIGUIENTES_PASOS.md
.github/workflows/: README.md  backend-ci.yml  deploy-dev.yml  frontend-ci.yml  terraform-apply-dev.yml  terraform-apply-prd.yml  terraform-apply-qas.yml  terraform-destroy.yml  terraform-plan.yml  test-all.yml
backend/: Cargo.toml  clippy.toml  seed-data.json
backend/functions/availability/: Cargo.toml
backend/functions/availability/src/: main.rs
backend/functions/health/: Cargo.toml
backend/functions/health/src/: main.rs
backend/functions/professionals/: Cargo.toml
backend/functions/professionals/src/: main.rs
backend/functions/schedule-reminder/: Cargo.toml
backend/functions/schedule-reminder/src/: main.rs
backend/functions/send-notification/: Cargo.toml
backend/functions/send-notification/src/: main.rs
backend/functions/send-notification/templates/: booking-cancelled.html  booking-confirmation.html  booking-reminder.html
backend/shared-lib/: Cargo.toml
backend/shared-lib/src/: auth.rs  dynamodb.rs  error.rs  lib.rs  response.rs  tracing.rs
docs/: API.md  AUTHENTICATION.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  ROADMAP.md  RUNBOOK.md  TESTING.md
docs/archive/: ANALISIS_GAP_IMPLEMENTACION.md  CONFIGURAR_ENVIRONMENTS_GITHUB.md  CONFIGURAR_REPOSITORIO.md  CURSOR_SETUP_COMPLETO.md  DEPLOYMENT_COMPLETADO.md  ESTADO_FINAL_CI_CD.md  ESTADO_FINAL_MVP.md  FASE1_COMPLETADA.md  FASE3_COMPLETADA.md  FASE4_COMPLETADA.md  GUIA_ORGANIZACION_PROYECTO.md  PLAN_MIGRACION_TERRAFORM.md  PROBLEMA_CLOUDFRONT_SOLUCIONADO.md  RESUMEN_FINAL.md  REVISION_COMPLETA_FINAL.md  SISTEMA_100_COMPLETADO.md  SISTEMA_COMPLETO_FINAL.md  SPRINT1_COMPLETADO.md  VALIDACION_FASES_1-6.md  backlog_y_sprints_reserva_odontologica_saa_s.md  reserva_de_citas_odontologicas_saa_s.md
docs/deployment/: DEPLOYMENT.md
docs/infrastructure/: ARCHITECTURE.md
docs/setup/: ONBOARDING_CHECKLIST.md
frontend/: .eslintrc.cjs  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.js
frontend/e2e/: admin-flow.spec.ts  api-contract.spec.ts  auth.spec.ts  booking-complete-flow.spec.ts  booking-exhaustive.spec.ts  booking-flow.spec.ts  debug-booking.spec.ts  login-real.spec.ts  my-appointments.spec.ts  negative-flows.spec.ts  roles.spec.ts  smoke.spec.ts  test-real-browser.spec.ts
frontend/src/: config.js
frontend/static/: manifest.json
frontend/tests/: global-setup.ts
scripts/: cloudwatch-dashboard.json  create-cognito-test-user.sh  create-test-data.sh  oidc-setup-ci.sh  seed-database.sh  seed-dynamo-direct.sh  seed-tests.sh  smoke-infra.sh  sync-cursor-rules.sh  verify-completion.sh  waf-negative-tests.sh  zap-baseline.sh
terraform/: .gitignore  .tflint.hcl  ENVIRONMENT_DIFFERENCES.md  FASE2_COMPLETADA.md  FASE6_COMPLETADA.md  README.md
terraform/scripts/: apply-dev.sh  apply-prd.sh  apply-qas.sh  destroy-dev.sh  (+5 more)
(+81 files in other folders)
