[package]
name = "shared-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13"
aws-sdk-dynamodb = "1"
aws-config = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
