[package]
name = "availability"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
validator = { version = "0.18", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
aws-sdk-dynamodb = "1"
anyhow = "1"
shared-lib = { path = "../../shared-lib" }

[dev-dependencies]
tokio-test = "0.4"
