[package]
name = "health"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
shared-lib = { path = "../../shared-lib" }

[dev-dependencies]
tokio-test = "0.4"
