[package]
name = "professionals"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
aws-sdk-dynamodb = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
anyhow = "1"
shared-lib = { path = "../../shared-lib" }
