[package]
name = "schedule-reminder"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13"
lambda_runtime = "0.13"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = "0.4"
aws-sdk-scheduler = "1"
aws-config = "1"
shared-lib = { path = "../../shared-lib" }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
