[package]
name = "send-notification"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
aws-sdk-ses = "1"
aws-config = "1"
anyhow = "1"
shared-lib = { path = "../../shared-lib" }
